Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
 <p>A music beat box to play music by selecting the beats of corresponding instruments.</p>
 
 <h2>
+<a name="concepts-used" class="anchor" href="#concepts-used"><span class="octicon octicon-link"></span></a>Concepts Used</h2>
+
+<ul>
+<li>Package [com.abhisekp]</li>
+<li>Class [encapsulation of methods(behaviour) and fields(variables or state)]</li>
+<li>Class member access specifier [public, private]</li>
+<li>Swing GUI API [JFrame, JPanel, BoxLayout, GridLayout, JButton, JCheckbox]</li>
+<li>Event Listeners [addActionListener()]</li>
+<li>Inner class or Anonymous class [used to add event listeners]</li>
+<li>Sound API [Sequencer, Sequence, Track, MidiEvent]</li>
+</ul><h2>
 <a name="building" class="anchor" href="#building"><span class="octicon octicon-link"></span></a>Building</h2>
 
 <p><strong>BeatBox.java</strong> - main class</p>
