Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <a name="concepts-used" class="anchor" href="#concepts-used"><span class="octicon octicon-link"></span></a>Concepts Used</h2>
 
 <ul>
-<li>Package [com.abhisekp]</li>
-<li>Class [encapsulation of methods(behaviour) and fields(variables or state)]</li>
-<li>Class member access specifier [public, private]</li>
-<li>Swing GUI API [JFrame, JPanel, BoxLayout, GridLayout, JButton, JCheckbox]</li>
-<li>Event Listeners [addActionListener()]</li>
-<li>Inner class or Anonymous class [used to add event listeners]</li>
-<li>Sound API [Sequencer, Sequence, Track, MidiEvent]</li>
+<li>Package [<em>com.abhisekp</em>]</li>
+<li>Class [<em>encapsulation of methods(behaviour) and fields(variables or state)</em>]</li>
+<li>Class member access specifier [<em>public, private</em>]</li>
+<li>Swing GUI API [<em>JFrame, JPanel, BoxLayout, GridLayout, JButton, JCheckbox</em>]</li>
+<li>Event Listeners [<em>addActionListener()</em>]</li>
+<li>Inner class or Anonymous class [<em>used to add event listeners</em>]</li>
+<li>Sound API [<em>Sequencer, Sequence, Track, MidiEvent</em>]</li>
 </ul><h2>
 <a name="building" class="anchor" href="#building"><span class="octicon octicon-link"></span></a>Building</h2>
 
@@ -69,7 +69,7 @@
 
 <ul>
 <li>Java SE 7 SDK (using Override &amp; Anonymous class)</li>
-<li>Java IDE (e.g. IntelliJ IDEA, Netbeans, Eclipse, etc)</li>
+<li>Java IDE (e.g. IntelliJ IDEA, Netbeans, Eclipse, etc) (optional)</li>
 </ul><h3>
 <a name="compiling-windows-manually" class="anchor" href="#compiling-windows-manually"><span class="octicon octicon-link"></span></a>Compiling (Windows, Manually)</h3>
 
@@ -82,11 +82,18 @@ javac -d ..\out\ com\abhisekp\BeatBox.java
 <h3>
 <a name="running-windows" class="anchor" href="#running-windows"><span class="octicon octicon-link"></span></a>Running (Windows)</h3>
 
-<pre><code>cd out\
+<pre><code>cd ..\out\
 java com.abhisekp.BeatBox
 </code></pre>
 
-<h2>
+<h3>
+<a name="future" class="anchor" href="#future"><span class="octicon octicon-link"></span></a>Future</h3>
+
+<ul>
+<li>Save &amp; Load Midi files</li>
+<li>Send Midi using Network</li>
+<li>Chat server &amp; client</li>
+</ul><h2>
 <a name="get-softwares" class="anchor" href="#get-softwares"><span class="octicon octicon-link"></span></a>Get Softwares</h2>
 
 <ul>
