Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <a name="create-music-on-go" class="anchor" href="#create-music-on-go"><span class="octicon octicon-link"></span></a><em>Create Music on Go</em>
 </h3>
 
-<p>A music beat box to play music by selecting the beats of corresponding instruments.</p>
+<p>A music beat box to play music by selecting the beats of corresponding instruments.
+<img src="https://i.imgur.com/L9JHQ1o.png" alt="BeatBox App" title="BeatBox App"></p>
 
 <h2>
 <a name="concepts-used" class="anchor" href="#concepts-used"><span class="octicon octicon-link"></span></a>Concepts Used</h2>
@@ -80,14 +81,19 @@ javac -d ..\out\ com\abhisekp\BeatBox.java
 </code></pre>
 
 <h3>
+<a name="import-in-eclipse-windows-osx-linux-automatic" class="anchor" href="#import-in-eclipse-windows-osx-linux-automatic"><span class="octicon octicon-link"></span></a>Import in Eclipse (Windows, OSX, Linux, Automatic)</h3>
+
+<p>How to import BeatBox sources in Eclipse <a href="https://imgur.com/a/GM8Rf?gallery" title="Import BeatBox in Eclipse">See here</a></p>
+
+<h3>
 <a name="running-windows" class="anchor" href="#running-windows"><span class="octicon octicon-link"></span></a>Running (Windows)</h3>
 
 <pre><code>cd ..\out\
 java com.abhisekp.BeatBox
 </code></pre>
 
-<h3>
-<a name="future" class="anchor" href="#future"><span class="octicon octicon-link"></span></a>Future</h3>
+<h2>
+<a name="future" class="anchor" href="#future"><span class="octicon octicon-link"></span></a>Future</h2>
 
 <ul>
 <li>Save &amp; Load Midi files</li>
@@ -101,7 +107,11 @@ java com.abhisekp.BeatBox
 <li><a href="https://netbeans.org/downloads/start.html?platform=windows&amp;lang=en&amp;option=javase">Netbeans</a></li>
 <li><a href="https://www.eclipse.org/downloads/packages/eclipse-standard-432/keplersr2">Eclipse</a></li>
 <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java SE 7 or 8 SDK</a></li>
-</ul>
+</ul><h2>
+<a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How to</h2>
+
+<h3>
+<a name="import-project" class="anchor" href="#import-project"><span class="octicon octicon-link"></span></a>Import Project</h3>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/abhisekp">abhisekp</a></p>
