--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ javac -d ..\out\ com\abhisekp\BeatBox.java
 <h3>
 <a name="import-in-eclipse-windows-osx-linux-automatic" class="anchor" href="#import-in-eclipse-windows-osx-linux-automatic"><span class="octicon octicon-link"></span></a>Import in Eclipse (Windows, OSX, Linux, Automatic)</h3>
 
-<p>How to import BeatBox sources in Eclipse <a href="https://imgur.com/a/GM8Rf?gallery" title="Import BeatBox in Eclipse">See here</a></p>
+<p>How to import BeatBox sources in Eclipse <a href="https://imgur.com/a/GM8Rf?gallery" title="Import BeatBox in Eclipse">see here</a></p>
 
 <h3>
 <a name="running-windows" class="anchor" href="#running-windows"><span class="octicon octicon-link"></span></a>Running (Windows)</h3>
@@ -107,11 +107,7 @@ java com.abhisekp.BeatBox
 <li><a href="https://netbeans.org/downloads/start.html?platform=windows&amp;lang=en&amp;option=javase">Netbeans</a></li>
 <li><a href="https://www.eclipse.org/downloads/packages/eclipse-standard-432/keplersr2">Eclipse</a></li>
 <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java SE 7 or 8 SDK</a></li>
-</ul><h2>
-<a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How to</h2>
-
-<h3>
-<a name="import-project" class="anchor" href="#import-project"><span class="octicon octicon-link"></span></a>Import Project</h3>
+</ul>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/abhisekp">abhisekp</a></p>
