Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 <img src="https://i.imgur.com/L9JHQ1o.png" alt="BeatBox App" title="BeatBox App"></p>
 
 <h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>Play &amp; Stop music or Reset player to default</li>
+<li>Change Playback speed</li>
+<li>Many types of Drum Kit instruments</li>
+</ul><h2>
 <a name="concepts-used" class="anchor" href="#concepts-used"><span class="octicon octicon-link"></span></a>Concepts Used</h2>
 
 <ul>
@@ -81,24 +88,25 @@ javac -d ..\out\ com\abhisekp\BeatBox.java
 </code></pre>
 
 <h3>
-<a name="import-in-eclipse-windows-osx-linux-automatic" class="anchor" href="#import-in-eclipse-windows-osx-linux-automatic"><span class="octicon octicon-link"></span></a>Import in Eclipse (Windows, OSX, Linux, Automatic)</h3>
-
-<p>How to import BeatBox sources in Eclipse <a href="https://imgur.com/a/GM8Rf?gallery" title="Import BeatBox in Eclipse">see here</a></p>
-
-<h3>
 <a name="running-windows" class="anchor" href="#running-windows"><span class="octicon octicon-link"></span></a>Running (Windows)</h3>
 
 <pre><code>cd ..\out\
 java com.abhisekp.BeatBox
 </code></pre>
 
+<h3>
+<a name="import-in-eclipse-windows-osx-linux-automatic" class="anchor" href="#import-in-eclipse-windows-osx-linux-automatic"><span class="octicon octicon-link"></span></a>Import in Eclipse (Windows, OSX, Linux, Automatic)</h3>
+
+<p>How to import BeatBox sources in Eclipse <a href="https://imgur.com/a/GM8Rf?gallery" title="Import BeatBox in Eclipse">see here</a></p>
+
 <h2>
-<a name="future" class="anchor" href="#future"><span class="octicon octicon-link"></span></a>Future</h2>
+<a name="future-todo" class="anchor" href="#future-todo"><span class="octicon octicon-link"></span></a>Future (<a href="https://github.com/TODO" class="user-mention">@TODO</a>)</h2>
 
 <ul>
-<li>Save &amp; Load Midi files</li>
+<li>Save &amp; Load Midi files from FileSystem</li>
 <li>Send Midi using Network</li>
-<li>Chat server &amp; client</li>
+<li>Chat server &amp; client to transmit music between peers</li>
+<li>Upload Midi music to Online Sound Storage services (e.g. SoundCloud)</li>
 </ul><h2>
 <a name="get-softwares" class="anchor" href="#get-softwares"><span class="octicon octicon-link"></span></a>Get Softwares</h2>
 
