Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ java com.abhisekp.BeatBox
 <p>How to import BeatBox sources in Eclipse <a href="https://imgur.com/a/GM8Rf?gallery" title="Import BeatBox in Eclipse">see here</a></p>
 
 <h2>
-<a name="future-todo" class="anchor" href="#future-todo"><span class="octicon octicon-link"></span></a>Future (<a href="https://github.com/TODO" class="user-mention">@TODO</a>)</h2>
+<a name="future-todos" class="anchor" href="#future-todos"><span class="octicon octicon-link"></span></a>Future (TODOs)</h2>
 
 <ul>
 <li>Save &amp; Load Midi files from FileSystem</li>
