--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 <p>A music beat box to play music by selecting the beats of corresponding instruments.
 <img src="https://i.imgur.com/L9JHQ1o.png" alt="BeatBox App" title="BeatBox App"></p>
 
-<p>Video Demo: <a href="http://youtu.be/lTfO8-perP8" title="BeatBox App Visual Demo">http://youtu.be/lTfO8-perP8</a>
-Audio Audio: <a href="https://soundcloud.com/abhisekp/beatbox-demo" title="BeatBox App Music Demo">https://soundcloud.com/abhisekp/beatbox-demo</a></p>
+<p>Video Demo: <a href="http://youtu.be/lTfO8-perP8" title="BeatBox App Visual Demo">http://youtu.be/lTfO8-perP8</a></p>
+
+<p>Audio Demo: <a href="https://soundcloud.com/abhisekp/beatbox-demo" title="BeatBox App Music Demo">https://soundcloud.com/abhisekp/beatbox-demo</a></p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
