Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ java com.abhisekp.BeatBox
 <h2>
 <a name="running-packaged-jar" class="anchor" href="#running-packaged-jar"><span class="octicon octicon-link"></span></a>Running Packaged jar</h2>
 
-<pre><code>java -jar "Mini Music Player.jar"
+<pre><code>java -jar "BeatBox.jar"
 </code></pre>
 
 <h3>
