Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -119,9 +119,14 @@ java com.abhisekp.BeatBox
 </code></pre>
 
 <h2>
+<a name="get-packaged-jar" class="anchor" href="#get-packaged-jar"><span class="octicon octicon-link"></span></a>Get Packaged jar</h2>
+
+<p>Download BeaBox App <a href="https://github.com/abhisekp/BeatBox/releases/download/v0.1/BeatBox-v01.jar">v0.1</a></p>
+
+<h2>
 <a name="running-packaged-jar" class="anchor" href="#running-packaged-jar"><span class="octicon octicon-link"></span></a>Running Packaged jar</h2>
 
-<pre><code>java -jar "BeatBox.jar"
+<pre><code>java -jar "BeatBox-v01.jar"
 </code></pre>
 
 <h3>
